k8s/disabled/linkding/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: linkding
  name: linkding
  namespace: linkding
spec:
  selector:
    matchLabels:
      app: linkding
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: linkding
    spec:
      containers:
        - name: linkding
          image: ghcr.io/sissbruecker/linkding:latest@sha256:49eff0b0b90c63760fda75e615357a0e55fcb7dc51876f2a0a5dddb958bd3df4
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9090
              name: http
              protocol: TCP
          volumeMounts:
            - mountPath: /etc/linkding/data
              name: appdata
      restartPolicy: Always
      volumes:
        - name: appdata
          hostPath:
            path: /config/linkding
            type: DirectoryOrCreate
