k8s/disabled/linkding/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: linkding
spec:
  ingressClassName: ingress-nginx-external
  tls:
    - hosts:
        - linkding.lab.javydekoning.com
  rules:
    - host: linkding.lab.javydekoning.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: linkding
                port:
                  name: http
